--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div class="circle-button" id="mainCircle">P</div>
     <div class="line"></div>
     <div class="rebirth-circle" id="rebirthCircle">R</div>
+    <div class="line"></div>
+    <div class="prestige-circle" id="prestigeCircle">M</div>
 
     <div class="menu" id="circleMenu">
         <h3>Points</h3>
@@ -70,6 +72,23 @@
         </div>
         <div class="upgrade">
             <button id="rebirthUpgrade4" class="upgrade-button">Rebirth Upgrade 4: Boost points by rebirth points (15 Rebirth Points)</button>
+        </div>
+    </div>
+
+    <div class="menu" id="prestigeMenu">
+        <h3>Prestige Upgrades</h3>
+        <p>You have: <span id="prestigePointsDisplay">0</span> Prestige Points</p>
+        <p>You will get: <span id="prestigeConvertPoints">0</span> Prestige Points (Requires 10 Rebirth Points and 4 Rebirth Upgrades)</p>
+        <button id="prestigeConvertButton" style="background-color: aqua; color: black;">Convert Rebirth Points to Prestige Points</button>
+
+        <div class="upgrade">
+            <button id="prestigeUpgrade1" class="upgrade-button">Prestige Upgrade 1: x3 Points Gain (1 Prestige Point)</button>
+        </div>
+        <div class="upgrade">
+            <button id="prestigeUpgrade2" class="upgrade-button">Prestige Upgrade 2: x10 Fragment Gain (2 Prestige Points)</button>
+        </div>
+        <div class="upgrade">
+            <button id="prestigeUpgrade3" class="upgrade-button">Prestige Upgrade 3: x2 Rebirth Gain (4 Prestige Points)</button>
         </div>
     </div>
 
