--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
         <p>You will get: <span id="rebirthConvertPoints">0</span> Rebirth Points (Request 500 Points and 9 upgrade from poits layer)</p>
         <button id="rebirthConvertButton" style="background-color: aqua; color: black;">Convert Fragment Points and Points to Rebirth Points</button>
         
+        <div id="rebirthMilestone1" class="milestone">
+            <p>Milestone 1: 10% Points per second</p>
+            <p>Status: <span id="rebirthMilestone1Status">Not Achieved</span></p>
+        </div>
+
         <h3>Rebirth Upgrades</h3>
         <div class="upgrade">
             <button id="rebirthUpgrade1" class="upgrade-button">Rebirth Upgrade 1: x2 Base Fragment Points Generation (1 Rebirth Points)</button>
